cleanup and build system and configuration